Modules/vpc/vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block
  enable_dns_support = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = {
    "Environment" = var.Environment
  }
}
